fix hobby image and rename class

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
-    <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon"/>
+    <!--Icon-->
+    <link rel="icon" href="images/letter-r.png title="Icon" type="image/png"/>
 
     <!-- Main CSS Files -->
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- Namari Color CSS -->
-    <link rel="stylesheet" href="css/namari-color.css">
+    <!-- Style Color CSS -->
+    <link rel="stylesheet" href="css/style-color.css">
 
     <!--Icon Fonts - Font Awesome Icons-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -119,10 +119,10 @@
                                     <a href="#inspiration">Inspiration</a>
                                 </li>
                                 <li>
-                                    <a href="#clients">IT Professions</a>
+                                    <a href="#professions">IT Professions</a>
                                 </li>
                                 <li>
-                                    <a href="#pricing">Hobby</a>
+                                    <a href="#favorite">Hobby</a>
                                 </li>
                             </ul>
                         </nav>
@@ -163,12 +163,12 @@
 
                     <!--Content Left Side-->
                     <div class="col-3">
-                        <!--User Testimonial-->
-                        <blockquote class="testimonial text-right bigtest">
+                        <!--User About-->
+                        <blockquote class="about text-right bigtest">
                             <q>It is better to sit alone than to associate with the bad; and it is better to remain seated with kindness than to be alone. It is better to talk to a seeker of knowledge than to remain silent; but silence is better than empty words</q>
                             <footer>— Muhammad SAW, prophet of Allah SWT</footer>
                         </blockquote>
-                        <!-- End of Testimonial-->
+                        <!-- End of About-->
 
                     </div>
                     <!--End Content Left Side-->
@@ -304,7 +304,7 @@
             </section>
             <!--End of Introduction-->
 
-            <!--Testimonials-->
+            <!--About-->
             <aside id="inspiration" class="scrollto text-center" data-enllax-ratio=".2">
 
                 <div class="row clearfix">
@@ -314,37 +314,37 @@
                         <h2 class="section-title">Favorite Inspirational Character</h2>
                     </div>
 
-                    <!--User Testimonial-->
-                    <blockquote class="col-3 testimonial classic">
+                    <!--User About-->
+                    <blockquote class="col-3 about classic">
                         <img src="images/user-images/elon-musk.jpg" alt="Elon Musk"/>
                         <q>I think this is the single best piece of advice: keep thinking about how you can do things better and pull yourself together.</q>
                         <footer>Elon Musk - Founder of SpaceX</footer>
                     </blockquote>
-                    <!-- End of Testimonial-->
+                    <!-- End of About-->
 
-                    <!--User Testimonial-->
-                    <blockquote class="col-3 testimonial classic">
+                    <!--User About-->
+                    <blockquote class="col-3 about classic">
                         <img src="images/user-images/bill-gates.jpg" alt="Bill Gates"/>
                         <q>Celebrating success is not a problem, but it is much more important to pay attention to the lessons learned from failure.</q>
                         <footer>Bill Gates - Founder of Microsoft</footer>
                     </blockquote>
-                    <!-- End of Testimonial-->
+                    <!-- End of About-->
 
-                    <!--User Testimonial-->
-                    <blockquote class="col-3 testimonial classic">
+                    <!--User About-->
+                    <blockquote class="col-3 about classic">
                         <img src="images/user-images/mark-zuckerberg.jpg" alt="Mark Zuckerberg"/>
                         <q>I generally think if you do good things for the people of the world, it comes back and you benefit from it over time.</q>
                         <footer>Mark Zuckerberg - Founder of Facebook</footer>
                     </blockquote>
-                    <!-- End of Testimonial-->
+                    <!-- End of About-->
 
                 </div>
 
             </aside>
-            <!--End of Testimonials-->
+            <!--End of About-->
 
-            <!--Clients-->
-            <section id="clients" class="scrollto clearfix">
+            <!--Professions-->
+            <section id="professions" class="scrollto clearfix">
                 <div class="row clearfix">
 
                     <div class="col-3">
@@ -361,36 +361,36 @@
 
                         <a href="#" class="col-3">
                             <img src="images/company-images/cyber-security.png" alt="Cyber Security"/>
-                            <div class="client-overlay"><span>Cyber Security</span></div>
+                            <div class="profession-overlay"><span>Cyber Security</span></div>
                         </a>
                         <a href="#" class="col-3">
                             <img src="images/company-images/software-development.png" alt="Software Engineer"/>
-                            <div class="client-overlay"><span>Software Engineer</span></div>
+                            <div class="profession-overlay"><span>Software Engineer</span></div>
                         </a>
                         <a href="#" class="col-3">
                             <img src="images/company-images/web-developer.png" alt="Web Developer"/>
-                            <div class="client-overlay"><span>Web Developer</span></div>
+                            <div class="profession-overlay"><span>Web Developer</span></div>
                         </a>
                         <a href="#" class="col-3">
                             <img src="images/company-images/machine-learning.png" alt="Artificial Intelligence"/>
-                            <div class="client-overlay"><span>Artificial Intelligence</span></div>
+                            <div class="profession-overlay"><span>Artificial Intelligence</span></div>
                         </a>
                         <a href="#" class="col-3">
                             <img src="images/company-images/game-development.png" alt="Game Developer"/>
-                            <div class="client-overlay"><span>Game Developer</span></div>
+                            <div class="profession-overlay"><span>Game Developer</span></div>
                         </a>
                         <a href="#" class="col-3">
                             <img src="images/company-images/ux-design.png" alt="UI/UX Designer"/>
-                            <div class="client-overlay"><span>UI/UX Designer</span></div>
+                            <div class="profession-overlay"><span>UI/UX Designer</span></div>
                         </a>
                     </div>
 
                 </div>
             </section>
-            <!--End of Clients-->
+            <!--End of Professions-->
 
-            <!--Pricing Tables-->
-            <section id="pricing" class="secondary-color text-center scrollto clearfix ">
+            <!--Hobby Tables-->
+            <section id="favorite" class="secondary-color text-center scrollto clearfix ">
                 <div class="row clearfix">
 
                     <div class="section-heading">
@@ -398,39 +398,39 @@
                         <h2 class="section-title">I Always Do</h2>
                     </div>
 
-                    <!--Pricing Block-->
-                    <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="pricing-block-content1">
+                    <!--Favorite Block-->
+                    <div class="favorite-block col-3 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="favorite-block-content bg-image-1">
                             <h3>Basketball</h3>
-                            <p class="pricing-sub">Playing Basketball</p>
-                            <a href="#" class="button">View More</a>
+                            <p class="favorite-sub">Playing Basketball</p>
+                            <a href="https://en.wikipedia.org/wiki/Basketball" class="button">View More</a>
                         </div>
                     </div>
-                    <!--End Pricing Block-->
+                    <!--End Favorite Block-->
 
-                    <!--Pricing Block-->
-                    <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="pricing-block-content2">
-                            <h3>Programming</h3>
-                            <p class="pricing-sub">I Like Programming</p>
-                            <a href="#" class="button">View More</a>
+                    <!--favorite Block-->
+                    <div class="favorite-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="favorite-block-content bg-image-2">
+                            <h3>Computer Programming</h3>
+                            <p class="favorite-sub">I Like Programming</p>
+                            <a href="https://en.wikipedia.org/wiki/Computer_programming" class="button">View More</a>
                         </div>
                     </div>
-                    <!--End Pricing Block-->
+                    <!--End Favorite Block-->
 
-                    <!--Pricing Block-->
-                    <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
-                        <div class="pricing-block-content3">
+                    <!--Favorite Block-->
+                    <div class="favorite-block col-3 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="favorite-block-content bg-image-3">
                             <h3>Badminton</h3>
-                            <p class="pricing-sub">Playing Badminton</p>
-                            <a href="#" class="button">View More</a>
+                            <p class="favorite-sub">Playing Badminton</p>
+                            <a href="https://en.wikipedia.org/wiki/Badminton" class="button">View More</a>
                         </div>
                     </div>
-                    <!--End Pricing Block-->
+                    <!--End Favorite Block-->
 
                 </div>
             </section>
-            <!--End of Pricing Tables-->
+            <!--End of Hobby Tables-->
 
         </main>
         <!--End Main Content Area-->
