--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 
             <!--Gallery-->
             <h3 style="text-align: center; margin-top: 50px;">Gallery</h3>
+            <h4 style="text-align: center; margin-top: 5px;">This will be a gallery of my achievements</h4>
             </aside>
             <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
                     data-featherlight-filter="a">
