--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                                     <a href="#gallery">Gallery</a>
                                 </li>
                                 <li>
-                                    <a href="#learned">Learned</a>
+                                    <a href="#skills">Skills</a>
+                                </li>
+                                <li>
+                                    <a href="#projects">Projects</a>
                                 </li>
                                 <li>
                                     <a href="#inspiration">Inspiration</a>
-                                </li>
-                                <li>
-                                    <a href="#professions">IT Professions</a>
                                 </li>
                                 <li>
                                     <a href="#favorite">Hobby</a>
@@ -139,7 +139,7 @@
                 <div class="col-38">
 
                     <div class="section-heading">
-                        <h1>CAUSE EVERYTHING IS GONNA BE OGHEY</h1>
+                        <h1>"Just Keep Going"</h1>
                         <h3>Hello World, my name is Muh Rafi Al Ayyubi. I want to be an expert in Cyber Security</h3>
                     </div>
 
@@ -174,7 +174,6 @@
                     <!--Content of the Right Side-->
                     <div class="col-3">
                         <div class="section-heading">
-                            <h3>BELIEVING</h3>
                             <h2 class="section-title">Focusing on the things you love</h2>
                             <p class="section-subtitle">I am a student at the Kalimantan Institute of Technology</p>
                         </div>
@@ -224,13 +223,13 @@
             <!--End of Gallery-->
 
             <!--Introduction-->
-            <section id="learned" class="introduction scrollto">
+            <section id="skills" class="introduction scrollto">
 
                 <div class="row clearfix">
 
                     <div class="col-3">
                         <div class="section-heading">
-                            <h3>Learned</h3>
+                            <h3>Skills</h3>
                             <h2 class="section-title">Languages and Tools</h2>
                             <p class="section-subtitle">Hei, i have a joke for you, why does ten plus ten equal eleven plus eleven? Because ten plus ten is twenty and eleven plus eleven is twenty too hahahah, hmm i know thats not funny right :v. Besides, it is a technology that I have learned</p>
                         </div>
@@ -303,6 +302,51 @@
             </section>
             <!--End of Introduction-->
 
+            <!--Projects-->
+            <section id="projects" class="scrollto clearfix">
+                <div class="row clearfix">
+
+                    <div class="col-3">
+
+                        <div class="section-heading">
+                            <h2 class="section-title">Projects</h2>
+                            <p class="section-subtitle">The following is a list of projects that I have worked on with my team</p>
+                        </div>
+
+                    </div>
+
+                    <div class="col-2-3">
+
+                        <a href="#" class="col-3">
+                            <img src="images/company-images/cyber-security.png" alt="Cyber Security"/>
+                            <div class="project-overlay"><span>Cyber Security</span></div>
+                        </a>
+                        <a href="#" class="col-3">
+                            <img src="images/company-images/software-development.png" alt="Software Engineer"/>
+                            <div class="project-overlay"><span>Software Engineer</span></div>
+                        </a>
+                        <a href="#" class="col-3">
+                            <img src="images/company-images/web-developer.png" alt="Web Developer"/>
+                            <div class="project-overlay"><span>Web Developer</span></div>
+                        </a>
+                        <a href="#" class="col-3">
+                            <img src="images/company-images/machine-learning.png" alt="Artificial Intelligence"/>
+                            <div class="project-overlay"><span>Artificial Intelligence</span></div>
+                        </a>
+                        <a href="#" class="col-3">
+                            <img src="images/company-images/game-development.png" alt="Game Developer"/>
+                            <div class="project-overlay"><span>Game Developer</span></div>
+                        </a>
+                        <a href="#" class="col-3">
+                            <img src="images/company-images/ux-design.png" alt="UI/UX Designer"/>
+                            <div class="project-overlay"><span>UI/UX Designer</span></div>
+                        </a>
+                    </div>
+
+                </div>
+            </section>
+            <!--End of Projects-->
+
             <!--About-->
             <aside id="inspiration" class="scrollto text-center" data-enllax-ratio=".2">
 
@@ -341,52 +385,6 @@
 
             </aside>
             <!--End of About-->
-
-            <!--Professions-->
-            <section id="professions" class="scrollto clearfix">
-                <div class="row clearfix">
-
-                    <div class="col-3">
-
-                        <div class="section-heading">
-                            <h3>Professions</h3>
-                            <h2 class="section-title">IT Professions</h2>
-                            <p class="section-subtitle">There are many professions in the IT field. The following are professions that are of interest to many people</p>
-                        </div>
-
-                    </div>
-
-                    <div class="col-2-3">
-
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/cyber-security.png" alt="Cyber Security"/>
-                            <div class="profession-overlay"><span>Cyber Security</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/software-development.png" alt="Software Engineer"/>
-                            <div class="profession-overlay"><span>Software Engineer</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/web-developer.png" alt="Web Developer"/>
-                            <div class="profession-overlay"><span>Web Developer</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/machine-learning.png" alt="Artificial Intelligence"/>
-                            <div class="profession-overlay"><span>Artificial Intelligence</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/game-development.png" alt="Game Developer"/>
-                            <div class="profession-overlay"><span>Game Developer</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/ux-design.png" alt="UI/UX Designer"/>
-                            <div class="profession-overlay"><span>UI/UX Designer</span></div>
-                        </a>
-                    </div>
-
-                </div>
-            </section>
-            <!--End of Professions-->
 
             <!--Hobby Tables-->
             <section id="favorite" class="secondary-color text-center scrollto clearfix ">
