add banner and projects image

--- a/index.html
+++ b/index.html
@@ -317,29 +317,17 @@
 
                     <div class="col-2-3">
 
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/cyber-security.png" alt="Cyber Security"/>
-                            <div class="project-overlay"><span>Cyber Security</span></div>
+                        <a href="https://github.com/luminostar/TubesAlpro" class="col-3">
+                            <img src="images/project-images/todolist.jpg" alt="todolist"/>
+                            <div class="project-overlay"><span>Atur Aja</span></div>
                         </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/software-development.png" alt="Software Engineer"/>
-                            <div class="project-overlay"><span>Software Engineer</span></div>
+                        <a href="https://github.com/fzhnf/e-ConsultationSheet-tubesPBO" class="col-3">
+                            <img src="images/project-images/ems.jpg" alt="ems"/>
+                            <div class="project-overlay"><span>E-Consultation Sheet</span></div>
                         </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/web-developer.png" alt="Web Developer"/>
-                            <div class="project-overlay"><span>Web Developer</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/machine-learning.png" alt="Artificial Intelligence"/>
-                            <div class="project-overlay"><span>Artificial Intelligence</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/game-development.png" alt="Game Developer"/>
-                            <div class="project-overlay"><span>Game Developer</span></div>
-                        </a>
-                        <a href="#" class="col-3">
-                            <img src="images/company-images/ux-design.png" alt="UI/UX Designer"/>
-                            <div class="project-overlay"><span>UI/UX Designer</span></div>
+                        <a href="https://github.com/fzhnf/ims-gudang-toko" class="col-3">
+                            <img src="images/project-images/ims.jpg" alt="ims"/>
+                            <div class="project-overlay"><span>Inventory Management System</span></div>
                         </a>
                     </div>
 
